--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="main">
+		<div class="heading">
+			<h1>This is a Hiding</h1>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
