--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<div class="main">
-		<div class="heading">
-			<h1>This is a Hiding</h1>
-		</div>
+		
+			<h1 class="heading" id="heading">This is a Hiding</h1>
+	
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
